Fixed the height of the textArea then created a custom scrollbar

--- a/src/Home.css
+++ b/src/Home.css
@@ -98,4 +98,22 @@ a{
   width: 82%;
   border-top-left-radius: 4px;
   height: 100%;
+  overflow: auto; 
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(30, 184, 165, 0.5);
 }
